# jacaranda

./: .gitignore  CMakeLists.txt  README.md  file.wasm  full.s  test.ll  test.s
include/: compiler.h  jitaas.h  module.h  runtime.h
include/compiler/: compiler-envoy-client.h  compiler-envoy-server.h  compiler-envoy.h  compiler.h  decoder.h
include/local/: client.h  runtime.h
include/proto/: jacaranda.grpc.pb.cc  jacaranda.grpc.pb.h  jacaranda.pb.cc  jacaranda.pb.h  jitaas.grpc.pb.cc  jitaas.grpc.pb.h  jitaas.pb.cc  jitaas.pb.h  jitaas.proto
include/remote/: compiler.h  decoder.h
include/repository/: repository-envoy.h  repository.h
include/runtime/: runtime-envoy.h  runtime.h
include/shared/: ast.h  function.h  instruction.h  jacaranda.h  jitaas.h  payload.h  runtime-module.h  section.h  static-module.h  wasm-module.h  wasm.h
include/wasm/: function.h  module.h  payload.h  runtime-module.h  section.h  static-module.h  wasm.h
local/: CMakeLists.txt  file.wasm  main.cpp
remote/: main.cpp
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/compiler/: CMakeLists.txt  Makefile  cmake_install.cmake  compiler-envoy-client.cpp  compiler-envoy.cpp  compiler.cpp  decoder.cpp  main.cpp  stubs.S
src/local/: CMakeLists.txt  client.cpp  main.cpp  module.cpp  runtime.cpp  trampoline.S
src/proto/: CMakeLists.txt  Makefile  cmake_install.cmake  jacaranda.proto  jitaas.proto
src/remote/: CMakeLists.txt  compiler.cpp  decoder.cpp  main.cpp  server.cpp  stubs.S
src/repository/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  repository.cpp
src/runtime/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  runtime-envoy.cpp  runtime.cpp  trampoline.S  trampoline.S.old
src/shared/: CMakeLists.txt  Makefile  cmake_install.cmake  function.cpp  runtime-module.cpp  section.cpp  static-module.cpp  wasm-module.cpp
src/wasm/: CMakeLists.txt  module.cpp  runtime-module.cpp  section.cpp  static-module.cpp
test/: add.c  add.wasm  add.wat
